changed button to a tag for view resume

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
                 <h2>Raul Garcia Breijo</h2>
                 <h1>Aspiring Sofware Engineer</h1>
-                <button class="viewResume" id="resumeBtn">View Resume</button>
+                <a href="" class="viewResume" id="resumeNavigation">View Resume</a>
+
             </div>
         </section>
     <!-- <hr> -->
