--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <link rel="stylesheet" href="style.css">
- <title>RGB Portfolio la la la</title>
+ <title>Raul Portfolio</title>
 </head>
 
 <body>
 
- <header>
-  <nav>
-   <ul>
-    <li><a href="">Linkedin</a></li>
-    <li><a href="">GitHub</a></li>
-    <li><a href="">Resume</a></li>
-    <li><a href="">Contact</a></li>
-   </ul>
-  </nav>
+ <header >
+     <div>
+    <nav>
+        <ul>
+            <li><a href="">Linkedin</a></li>
+            <li><a href="">GitHub</a></li>
+            <li><a href="">Resume</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+        </nav>
+</div>
+
  </header>
 
  <section>
@@ -36,7 +39,7 @@
 
  <div class="container">
 
-  ``
+  
   <section class="projectSection">
 
    <h1 class="project">Projects</h1>
