name to target js

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
  <header >
-     <div>
-    <nav>
+     <div class="topNavSection">
+    <nav id="mainNavbar">
         <ul>
             <li><a href="">Linkedin</a></li>
             <li><a href="">GitHub</a></li>
@@ -21,7 +21,13 @@
             <li><a href="">Contact</a></li>
         </ul>
         </nav>
-</div>
+
+        <div class="hamburger"> 
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
 
  </header>
 
@@ -209,6 +215,9 @@
  <footer>
 
  </footer>
+
+ <script src="script.js"></script>
+
 
 </body>
 
