added link to github projects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <link rel="stylesheet" href="style.css">
- <title>Raul Partfolio</title>
+ <title>Raul Portfolio</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="https://www.linkedin.com/in/raulgarciabreijo" target="_blank">Linkedin</a></li>
             <li><a href="https://github.com/RGBreijo" target="_blank">GitHub</a></li>
-            <li><a href="">Resume</a></li>
+            <li><a href="/Resume.pdf" target="_blank">Resume</a></li>
             <li><a href="#emailSection">Contact</a></li>
         </ul>
         </nav>
@@ -37,7 +37,7 @@
    <h2>Raul Garcia Breijo</h2>
    <h1>Aspiring Sofware Engineer</h1>
 
-   <a href="" class="viewResume" id="resumeNavigation">View Resume</a>
+   <a href="/Resume.pdf" target="_blank" class="viewResume" id="resumeNavigation">View Resume</a>
 
   </div>
  </section>
@@ -60,10 +60,13 @@
 
      <div class="projectCardContent">
       <h2 class="projectCardTitle">To Do List</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, dolore aut nulla ratione unde deleniti officia aspernatur mollitia nostrum quam, doloremque vitae non ut similique corrupti impedit officiis ab itaque.</p>
+      <p>A web application for keeping organized. 
+        Users can create workspaces and populate 
+        the workspace with information about  important tasks 
+        that need to be completed.</p>
       <div class="cardFooter">
        <div class="cardIconContainer"><img src="images/htmlCSSJavascript.jpg" alt=""></div>
-       <div><a href="" class="viewProjectLink">View On Github</a></div>
+       <div><a href="https://github.com/RGBreijo/toDoList" target="_blank" class="viewProjectLink">View On Github</a></div>
       </div>
      </div>
     </div>
@@ -78,10 +81,12 @@
 
      <div class="projectCardContent">
       <h2 class="projectCardTitle">Discount College Stuff</h2>
-      <p> A website that shows students the free resources that FIU has to offer and allows them to receive an email notification when new resources are added. The resources were collected with the help of other FIU students through an online form. </p>
+      <p>A website to help FIU students discover the free resources 
+        that FIU offers. After informing FIU students about the website through an online forum, 
+        several students decide to contribute by providing even more resources that I was unaware of. </p>
       <div class="cardFooter">
-       <div id = "discountImage" class="cardIconContainer"><img src="images/htmlCSSJsReactLogos.jpg" alt=""></div>
-       <div><a href="" class="viewProjectLink">View On Github</a></div>
+       <div id = "discountImage" class="cardIconContainer"><img src="images/htmlCSSJsReactLogos.jpg" alt="" ></div>
+       <div><a href="https://github.com/RGBreijo/DiscountCollegeStuff" target="_blank" class="viewProjectLink">View On Github</a></div>
       </div>
      </div>
     </div>
@@ -95,10 +100,12 @@
         </video>   
           <div class="projectCardContent">
       <h2 class="projectCardTitle">Tic-Tac-Toe</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, dolore aut nulla ratione unde deleniti officia aspernatur mollitia nostrum quam, doloremque vitae non ut similique corrupti impedit officiis ab itaque.</p>
+      <p>A classic paper game gone digital. Players have the option to pick 
+        their name and choose their symbol. Once the game is over they can 
+        restart the game or create a new game.</p>
       <div class="cardFooter">
        <div class="cardIconContainer"><img src="images/htmlCSSJavascript.jpg" alt=""></div>
-       <div><a href="" class="viewProjectLink">View On Github</a></div>
+       <div><a href="https://github.com/RGBreijo/tic-tac-toe" target = "_blank" class="viewProjectLink">View On Github</a></div>
       </div>
      </div>
     </div>
@@ -114,10 +121,13 @@
 
      <div class="projectCardContent">
       <h2 class="projectCardTitle">Stock Simulator</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, dolore aut nulla ratione unde deleniti officia aspernatur mollitia nostrum quam, doloremque vitae non ut similique corrupti impedit officiis ab itaque.</p>
+      <p>A simulation of a simple stock trading platform allowing users to search, buy, sell, 
+        and save purchased stocks. Through the use of web scraping users can search any 
+        stock and get real time information about the stock. My partner and I decide to create it as the final 
+        project for our freshman year programming 1 class.</p>
       <div class="cardFooter">
        <div class="cardIconContainer"><img src="/images/javaFXLogo.png" alt=""></div>
-       <div><a href="" class="viewProjectLink">View On Github</a></div>
+       <div><a href="https://github.com/RGBreijo/JavaFinalProjectStockSimulator" target="_blank" class="viewProjectLink">View On Github</a></div>
       </div>
      </div>
     </div>
@@ -132,11 +142,14 @@
                     </video>
 
      <div class="projectCardContent">
-      <h2 class="projectCardTitle">Grid Word</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, dolore aut nulla ratione unde deleniti officia aspernatur mollitia nostrum quam, doloremque vitae non ut similique corrupti impedit officiis ab itaque.</p>
+      <h2 class="projectCardTitle">Q-Learning</h2>
+      <p>A project I created in order to understand the basics of reinforcement learning. 
+        I created a grid world environment and an agent to interact in the environment. Using 
+        evaluative feedback the agent needs to learn the shortest path to the finish line no matter
+        where it spawns on the grid. The technique used was Q-learning. </p>
       <div class="cardFooter">
        <div class="cardIconContainer"><img src="images/pythonLogo.png" alt=""></div>
-       <div><a href="" class="viewProjectLink">View On Github</a></div>
+       <div class="abc"><a href="https://github.com/RGBreijo/GridQLearning" target="_blank"class="viewProjectLink">View On Github</a></div>
       </div>
      </div>
     </div>
@@ -151,10 +164,12 @@
 
      <div class="projectCardContent">
       <h2 class="projectCardTitle">Multi-Armed Bandit</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, dolore aut nulla ratione unde deleniti officia aspernatur mollitia nostrum quam, doloremque vitae non ut similique corrupti impedit officiis ab itaque.</p>
+      <p>A project I created in order understand Multi-Arm bandit problems. Each “lever” is assigned different 
+        rewards that can be both positive or negative. The rewards have randomly generated probability distributions. 
+        The agent needs to learn which lever produces the highest reward. </p>
       <div class="cardFooter">
        <div class="cardIconContainer"><img src="images/pythonLogo.png" alt=""></div>
-       <div><a href="" class="viewProjectLink">View On Github</a></div>
+       <div><a href="https://github.com/RGBreijo/RL_K-Armed-Bandit" target="_blank" class="viewProjectLink">View On Github</a></div>
       </div>
      </div>
     </div>
