added to top bottom

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
- <header >
+ <header>
      <div class="topNavSection">
     <nav id="mainNavbar">
         <ul>
@@ -229,7 +229,9 @@
 
  </div>
  <footer>
-
+    <div> 
+        <div class="goBack"> <a href="#mainNavbar">^</a></div>
+    </div>
  </footer>
 
  <script src="script.js"></script>
