--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div>
 
      <video autoplay loop muted="true" class="projectVid">
-                        <source src="/videos/todo_reduce.mp4" type="video/mp4" />
+                        <source src="videos/todo_reduce.mp4" type="video/mp4" />
                     </video>
 
      <div class="projectCardContent">
@@ -78,7 +78,7 @@
     <div>
 
      <video autoplay loop muted="true" class="projectVid">
-                        <source src="/videos/discountCollege_reduce.mp4" type="video/mp4" />
+                        <source src="videos/discountCollege_reduce.mp4" type="video/mp4" />
                     </video>
 
      <div class="projectCardContent">
@@ -118,7 +118,7 @@
     <div>
 
      <video autoplay loop muted="true" class="projectVid">
-                        <source src="/videos/stock_reduce.mp4" type="video/mp4" />
+                        <source src="videos/stock_reduce.mp4" type="video/mp4" />
                     </video>
 
      <div class="projectCardContent">
@@ -140,7 +140,7 @@
     <div>
 
      <video autoplay loop muted="true" class="projectVid">
-                        <source src="/videos/grid world_reduce.mp4" type="video/mp4" />
+                        <source src="videos/grid world_reduce.mp4" type="video/mp4" />
                     </video>
 
      <div class="projectCardContent">
@@ -161,7 +161,7 @@
     <div>
 
      <video autoplay loop muted="true" class="projectVid">
-                        <source src="/videos/KArm-1_reduce.mp4" type="video/mp4" />
+                        <source src="videos/KArm-1_reduce.mp4" type="video/mp4" />
                     </video>
 
      <div class="projectCardContent">
