remove / from file path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="https://www.linkedin.com/in/raulgarciabreijo" target="_blank">Linkedin</a></li>
             <li><a href="https://github.com/RGBreijo" target="_blank">GitHub</a></li>
-            <li><a href="/Resume.pdf" target="_blank">Resume</a></li>
+            <li><a href="Resume.pdf" target="_blank">Resume</a></li>
             <li><a href="#emailSection">Contact</a></li>
         </ul>
         </nav>
@@ -39,7 +39,7 @@
    <h2>Raul Garcia Breijo</h2>
    <h1>Aspiring Sofware Engineer</h1>
 
-   <a href="/Resume.pdf" target="_blank" class="viewResume" id="resumeNavigation">View Resume</a>
+   <a href="Resume.pdf" target="_blank" class="viewResume" id="resumeNavigation">View Resume</a>
 
   </div>
  </section>
@@ -98,7 +98,7 @@
    <div class="projectCard">
     <div>
         <video autoplay loop muted="true" class="projectVid">
-            <source src="/videos/tick Tac_reduce.mp4" type="video/mp4" />
+            <source src="videos/tick Tac_reduce.mp4" type="video/mp4" />
         </video>   
           <div class="projectCardContent">
       <h2 class="projectCardTitle">Tic-Tac-Toe</h2>
