bringing back the to top

--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
 
  </div>
  <footer>
-    <!-- <div> 
+    <div> 
         <div class="goBack"> <a href="#mainNavbar">^</a></div>
-    </div> -->
+    </div>
  </footer>
 
  <script src="script.js"></script>
