--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
  <section>
   <div class="banner">
-   <img src="https://s3.amazonaws.com/pixpa.com/com/articles/1567147079-440035-headshot-2jpg.png" alt="headshot" width="150px" height="150px">
+   <img src="images/selfPortrait.jpeg" alt="headshot" width="150px" height="150px">
 
    <h2>Raul Garcia Breijo</h2>
    <h1>Aspiring Sofware Engineer</h1>
